--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,5 +1,13 @@
 <form action="/user/create" method="POST">
   <h2>Create an Account</h2>
+
+  <% if(flash && flash.err) { %>
+  	<ul class="alert">
+  		<% Object.keys(flash.err).forEach(function(error){ %>
+  			<li><%- JSON.stringify(flash.err[error]) %></li>
+  		<% }) %>
+  	</ul>
+  <% } %>
   <input type="text" class="form-control" placeholder="name" name="name">
   <input type="text" class="form-control" placeholder="title" name="title">
   <input type="text" class="form-control" placeholder="email" name="email">
